# vektor_bot

motor_controller/: setup.py
motor_controller/motor_controller/: bot_direction_subscriber.py  bot_dirn_sub_v2.py  kinematics.py  motor.py  motor2.py  pid_visualization.py  recorder.py  rpm_node.py  single_motor_testing.py  utils.py
my_interfaces/: CMakeLists.txt  package.xml
my_interfaces/msg/: VektorPID.msg  VektorRPM.msg  VektorTeleop.msg
vektor/: package.xml  setup.cfg  setup.py
vektor/config/: parameters.yaml  summon_vektor_config.rviz  view_omniwheel.rviz
vektor/launch/: joystick.launch.py  launcher.launch.py  summon_vektor.launch.py  vektor_launch.py  view_omniwheel.launch.py
vektor/meshes/: merged_wheel_rim_simplified.dae  roller_simplified.dae  wheel_rim_simplified.STL  wheel_rim_simplified.dae
vektor/msg/: ExtendedTwist.msg
vektor/urdf/: constants.xacro  inertial_macros.xacro  insert_roller_macro.xacro  make_omniwheel_macro.xacro  materials.xacro  omniwheel.urdf.xacro  vektor_bot.urdf.xacro
vektor/vektor/: DCMotor.py  PID_control_node.py  bot_direction.py  bot_direction_publisher.py  keyboard_teleop.py  kinematics.py  kinematics_node.py  l1_pressed_status.py  motor.py  motor_control.py  motor_interface_node.py  motor_rpm_current.py  odometry.py  pico_serial_comms.py  pid_controller.py  serial_broadcaster_node.py  serial_publisher_node.py  teleop_node.py  uart_odometry_reader.py  uart_pulse_reader.py
vektor/vektor/pico_codes/: KY_040_renc_ruler.py  LM393Tachometer_PIO.py  pico_sender_v2.py  pico_serial_comms.py
vektor/worlds/: empty.world
