<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vektor</name>
  <version>0.0.0</version>
  <description>
  
    VE-KT-O-R :  VEctor KinemaTics Omnidirectional Robot

    A omnidirectional drive robot that uses three omni wheels for holonomic omnidirectional drive, that we are making for our B.E. final year project.

  </description>
  <maintainer email="miraj.077bei022@acem.edu.np">Miraj Maharjan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>rclpy</depend>
  <depend>my_interfaes</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
